--- a/Assignment4.vcxproj
+++ b/Assignment4.vcxproj
@@ -130,6 +130,9 @@
     <ClCompile Include="bintree.cpp" />
     <ClCompile Include="borrow.cpp" />
     <ClCompile Include="businessLogic.cpp" />
+    <ClCompile Include="classics.cpp" />
+    <ClCompile Include="comedy.cpp" />
+    <ClCompile Include="drama.cpp" />
     <ClCompile Include="hashTable.cpp" />
     <ClCompile Include="movieFactory.cpp" />
     <ClCompile Include="nodedata.cpp" />
