--- a/Assignment4.vcxproj
+++ b/Assignment4.vcxproj
@@ -135,8 +135,11 @@
     <ClCompile Include="drama.cpp" />
     <ClCompile Include="driver.cpp" />
     <ClCompile Include="hashTable.cpp" />
+    <ClCompile Include="history.cpp" />
     <ClCompile Include="movieFactory.cpp" />
     <ClCompile Include="nodedata.cpp" />
+    <ClCompile Include="return.cpp" />
+    <ClCompile Include="show.cpp" />
     <ClCompile Include="transaction.cpp" />
     <ClCompile Include="transactionFactory.cpp" />
   </ItemGroup>
