--- a/Assignment4.vcxproj.filters
+++ b/Assignment4.vcxproj.filters
@@ -46,6 +46,13 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="classics.cpp">
+    <ClCompile Include="return.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="show.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="history.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -83,9 +90,6 @@
     <ClInclude Include="movieFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="nodedata.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="return.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -96,6 +100,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="transactionFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="nodedata.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
