Created .cpp files for different transactions

--- a/Assignment4.vcxproj
+++ b/Assignment4.vcxproj
@@ -131,8 +131,11 @@
     <ClCompile Include="borrow.cpp" />
     <ClCompile Include="businessLogic.cpp" />
     <ClCompile Include="hashTable.cpp" />
+    <ClCompile Include="history.cpp" />
     <ClCompile Include="movieFactory.cpp" />
     <ClCompile Include="nodedata.cpp" />
+    <ClCompile Include="return.cpp" />
+    <ClCompile Include="show.cpp" />
     <ClCompile Include="transaction.cpp" />
     <ClCompile Include="transactionFactory.cpp" />
   </ItemGroup>
