--- a/Assignment4.vcxproj.filters
+++ b/Assignment4.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="classics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="driver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bintree.h">
