Fixing current branch

--- a/Assignment4.vcxproj
+++ b/Assignment4.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\source\repos\CSS 502\Assignment_4\Assignment_4\Assignment_4_Driver.cpp" />
     <ClCompile Include="bintree.cpp" />
     <ClCompile Include="borrow.cpp" />
     <ClCompile Include="businessLogic.cpp" />
@@ -134,8 +135,8 @@
     <ClCompile Include="comedy.cpp" />
     <ClCompile Include="drama.cpp" />
     <ClCompile Include="driver.cpp" />
-    <ClCompile Include="hashTable.cpp" />
     <ClCompile Include="history.cpp" />
+    <ClCompile Include="movie.cpp" />
     <ClCompile Include="movieFactory.cpp" />
     <ClCompile Include="nodedata.cpp" />
     <ClCompile Include="return.cpp" />
@@ -151,7 +152,6 @@
     <ClInclude Include="comedy.h" />
     <ClInclude Include="customer.h" />
     <ClInclude Include="drama.h" />
-    <ClInclude Include="hashTable.h" />
     <ClInclude Include="history.h" />
     <ClInclude Include="movie.h" />
     <ClInclude Include="movieFactory.h" />
