added customer.cpp and integrated with businessLogic and HashTable

--- a/Assignment4.vcxproj.filters
+++ b/Assignment4.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="driver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="customer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bintree.h">
