--- a/Assignment4.vcxproj
+++ b/Assignment4.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="comedy.cpp" />
     <ClCompile Include="customer.cpp" />
     <ClCompile Include="drama.cpp" />
+    <ClCompile Include="hashTable.cpp" />
     <ClCompile Include="history.cpp" />
     <ClCompile Include="movie.cpp" />
     <ClCompile Include="movieFactory.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="comedy.h" />
     <ClInclude Include="customer.h" />
     <ClInclude Include="drama.h" />
+    <ClInclude Include="hashTable.h" />
     <ClInclude Include="history.h" />
     <ClInclude Include="movie.h" />
     <ClInclude Include="movieFactory.h" />
